--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -31,7 +31,29 @@ a {
 img {
   max-width: 100%;
   height: auto;
-  vertical-align: bottom;/* 画像下のスペースを消す */
+  vertical-align: bottom; /* 画像下のスペースを消す */
+}
+
+@media (min-width: 768px) {
+  .header-container {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1040px;
+  }
+}
+
+.breadcrumb {
+  display: none;
+}
+@media (min-width: 768px) {
+  .breadcrumb {
+    display: block;
+  }
+  .bc-container {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1040px;
+  }
 }
 
 /**
@@ -46,9 +68,9 @@ img {
 }
 @media (min-width: 768px) {
   .bottom-container {
-      margin: 0 auto;
-      padding: 0 20px 0 20px;
-      max-width: 1040px;
+    margin: 0 auto;
+    padding: 0 20px 0 20px;
+    max-width: 1040px;
   }
 }
 
@@ -69,9 +91,9 @@ img {
 }
 @media (min-width: 768px) {
   .footer-container {
-      max-width: 1040px;
-      margin: 0 auto;
-      padding: 0 20px;
+    max-width: 1040px;
+    margin: 0 auto;
+    padding: 0 20px;
   }
 }
 
