--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -36,6 +36,11 @@ img {
 
 /* ヘッダーコンテナ */
 
+.page-header {
+  background: url(../images/header-topline.svg) repeat-x;
+  border-bottom: 1px solid #d8d8d8;
+}
+
 @media (min-width: 768px) {
   .header-container {
     margin: 0 auto;
@@ -52,6 +57,7 @@ img {
 @media (min-width: 768px) {
   .breadcrumb {
     display: block;
+    background: #efefef;
   }
   .bc-container {
     margin: 0 auto;
@@ -64,6 +70,8 @@ img {
 
 .post .main-container {
   padding: 80px 4% 0 4%;
+  background: url(../images/post-bg.svg) repeat-x;
+  background-position: 0 10px;
 }
 @media (min-width: 768px) {
   .post .main-container {
@@ -74,6 +82,10 @@ img {
 }
 
 /* ページ下部コンテナ */
+
+.page-bottom {
+  background: url(../images/bottom-bg.svg);
+}
 
 .bottom-container {
   padding: 60px 4% 0 4%;
@@ -87,6 +99,11 @@ img {
 }
 
 /* フッターコンテナ */
+
+.page-footer {
+  background: #000;
+  color: #fff;
+}
 
 .footer-container {
   padding: 60px 4%;
