--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -88,6 +88,12 @@ img {
   margin-bottom: 60px;
 }
 
+.post-header h1 {
+  margin: 0 0 20px 0;
+  font-size: 1.875rem;
+  line-height: 1.5;
+}
+
 .post-contents {
   margin: 0 0 60px 0;
 }
