--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -91,6 +91,11 @@ img {
 
 .post-header {
   margin-bottom: 60px;
+  h1 {
+    margin: 0 0 20px 0;
+    font-size: 1.875rem;
+    line-height: 1.5;
+  }
 }
 
 .post-contents {
