--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -100,6 +100,23 @@ img {
 
 .post-contents {
   margin: 0 0 60px 0;
+
+  > *:first-child {
+    margin-top: 0px;
+  }
+  h2 {
+    margin: 60px 0 30px 0;
+    padding: 1rem 0;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    font-size: 1.25rem;
+  }
+  p {
+    margin: 30px 0;
+    line-height: 1.9;
+    text-align: justify;
+  }
+
   @include pc() {
     max-width: 600px;
     margin: 0 auto 60px auto;
