--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -23,7 +23,21 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  /* Noto Sans JPのレギュラーウェイトを指定 */
+}
+
+/* おもな太字タグのフォントウェイト設定 */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+th,
+strong {
+  font-weight: 700;
 }
 
 /* ベースのリンクカラー */
