--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -140,6 +140,15 @@ img {
   }
 }
 
+.list {
+  margin: 30px 0;
+
+  li {
+    margin-bottom: 1rem;
+    line-height: 1.5;
+  }
+}
+
 .post-footer {
   margin: 0 0 60px 0;
   @include pc() {
