--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -142,6 +142,15 @@ img {
   }
 }
 
+.list {
+  margin: 30px 0;
+}
+
+.list li {
+  margin-bottom: 1rem;
+  line-height: 1.5;
+}
+
 .post-footer {
   margin: 0 0 60px 0;
 }
