--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -151,6 +151,16 @@ img {
   line-height: 1.5;
 }
 
+.photo-caption {
+  margin: 30px 0;
+}
+
+.photo-caption figcaption {
+  margin-top: 5px;
+  font-size: 0.75rem;
+  color: #747474;
+}
+
 .post-footer {
   margin: 0 0 60px 0;
 }
