--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -158,6 +158,27 @@ img {
   }
 }
 
+.float-box {
+  display: flow-root;
+  margin: 30px 0;
+}
+
+.float-left {
+  float: left;
+  margin: 0 1rem 1rem 0;
+  width: 40%;
+}
+
+.float-right {
+  float: right;
+  margin: 0 0 1rem 1rem;
+  width: 40%;
+}
+
+.float-box p {
+  margin: 0;
+}
+
 .post-footer {
   margin: 0 0 60px 0;
   @include pc() {
