--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -179,6 +179,25 @@ img {
   margin: 0;
 }
 
+.post-tag {
+  margin-bottom: 5px;
+  font-size: 0.75rem;
+  line-height: 2;
+
+  span {
+    margin: 0 3px 0 0;
+    padding: 2px 10px;
+    background: #73cbd6;
+    border-radius: 100px;
+    word-break: keep-all;
+
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+}
+
 .post-footer {
   margin: 0 0 60px 0;
   @include pc() {
