--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -201,6 +201,20 @@ img {
   text-decoration: none;
 }
 
+.post-info {
+  font-size: 0.75rem;
+  text-align: right;
+}
+
+.post-info span {
+  margin: 0 10px 0 0;
+}
+
+.post-info i {
+  padding-right: 5px;
+  color: #73cbd6;
+}
+
 .post-footer {
   margin: 0 0 60px 0;
 }
