--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -198,6 +198,18 @@ img {
   }
 }
 
+.post-info {
+  font-size: 0.75rem;
+  text-align: right;
+  span {
+    margin: 0 10px 0 0;
+  }
+  i {
+    padding-right: 5px;
+    color: #73cbd6;
+  }
+}
+
 .post-footer {
   margin: 0 0 60px 0;
   @include pc() {
