--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -202,8 +202,11 @@ img {
 }
 
 .post-info {
+  margin-bottom: 3px;
+  padding-bottom: 15px;
   font-size: 0.75rem;
   text-align: right;
+  background: url(../images/post-line.svg) bottom repeat-x;
 }
 
 .post-info span {
