--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -229,6 +229,16 @@ img {
   }
 }
 
+.info-box {
+  margin: 30px 0;
+  padding: 2rem;
+  border: 4px solid #b8e5ea;
+}
+
+.info-box p {
+  margin: 0;
+}
+
 /* ページ下部コンテナ */
 .page-bottom {
   background: url(../images/bottom-bg.svg);
