--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -221,6 +221,15 @@ img {
   }
 }
 
+.info-box {
+  margin: 30px 0;
+  padding: 2rem;
+  border: 4px solid #b8e5ea;
+  p {
+    margin: 0;
+  }
+}
+
 /* ページ下部コンテナ */
 
 .page-bottom {
