--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -239,6 +239,34 @@ img {
   margin: 0;
 }
 
+.chat {
+  margin: 30px 0;
+}
+
+.chat .chat-1st {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 15px 0;
+}
+
+.chat .chat-1st .face {
+  margin: 0 10px 0 0;
+}
+
+.chat .chat-1st .talk {
+  background: #b8e5ea;
+}
+
+.chat .talk {
+  padding: 1.5rem;
+  border-radius: 20px;
+}
+
+.chat .talk p {
+  margin: 0;
+}
+
 /* ページ下部コンテナ */
 .page-bottom {
   background: url(../images/bottom-bg.svg);
