--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -233,18 +233,38 @@ img {
 .chat {
   margin: 30px 0;
 
-  .chat-1st {
+  .chat-1st,
+  .chat-2nd {
     display: flex;
     margin: 15px 0;
+  }
 
+  .chat-2nd {
+    flex-direction: row-reverse;
+  }
+
+  .chat-1st {
     .face {
+      flex: 0 0 70px;
       margin: 0 10px 0 0;
     }
     .talk {
       background: #b8e5ea;
     }
   }
+
+  .chat-2nd {
+    .face {
+      flex: 0 0 70px;
+      margin: 0 0 0 10px;
+    }
+    .talk {
+      background: #ffff7c;
+    }
+  }
+
   .talk {
+    flex: 1 1 auto;
     padding: 1.5rem;
     border-radius: 20px;
     p {
