--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -59,11 +59,30 @@ img {
   border-bottom: 1px solid #d8d8d8;
 }
 
+.page-header .sitetitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media (min-width: 768px) {
-  .header-container {
+  .page-header .header-container {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 1040px;
+  }
+  .page-header .sitetitle {
+    display: block;
+    padding: 30px 0 0 0;
+  }
+  .page-header .navbtn {
+    display: none;
   }
 }
 
