--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -61,13 +61,26 @@ img {
 .page-header {
   background: url(../images/header-topline.svg) repeat-x;
   border-bottom: 1px solid #d8d8d8;
-}
 
-@include pc() {
-  .header-container {
-    margin: 0 auto;
-    padding: 0 20px;
-    max-width: 1040px;
+  .sitetitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @include pc() {
+    .header-container {
+      margin: 0 auto;
+      padding: 0 20px;
+      max-width: 1040px;
+    }
+    .sitetitle {
+      display: block;
+      padding: 30px 0 0 0;
+    }
+    .navbtn {
+      display: none;
+    }
   }
 }
 
