--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -62,6 +62,16 @@ img {
   background: url(../images/header-topline.svg) repeat-x;
   border-bottom: 1px solid #d8d8d8;
 
+  .header-logo {
+    margin: 0;
+    padding-left: 15px;
+    font-size: 0;
+    line-height: 0;
+    img {
+      width: 130px;
+    }
+  }
+
   .sitetitle {
     display: flex;
     justify-content: space-between;
@@ -73,6 +83,12 @@ img {
       margin: 0 auto;
       padding: 0 20px;
       max-width: 1040px;
+    }
+    .header-logo {
+      padding: 0;
+      img {
+        width: 180px;
+      }
     }
     .sitetitle {
       display: block;
