--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -80,6 +80,7 @@ img {
     list-style: none;
 
     @include pc() {
+      display: flex !important;
       flex-direction: row;
       justify-content: flex-end;
     }
