--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -187,7 +187,38 @@ img {
     display: block;
     background: #efefef;
   }
-  .bc-container {
+  .breadcrumb .bc-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .breadcrumb .bc-nav li {
+    font-size: 0.75rem;
+    color: #747474;
+  }
+  .breadcrumb .bc-nav li::after {
+    padding: 0 5px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f054";
+  }
+  .breadcrumb .bc-nav li:last-child::after {
+    content: "";
+  }
+  .breadcrumb .bc-nav li a {
+    color: #747474;
+  }
+  .breadcrumb .bc-nav li a:hover {
+    opacity: 0.8;
+  }
+  .breadcrumb .bc-container {
     margin: 0 auto;
     padding: 12px 20px;
     max-width: 1040px;
