--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -159,16 +159,48 @@ img {
 
 .breadcrumb {
   display: none;
-}
-@media (min-width: 768px) {
-  .breadcrumb {
+
+  @include pc() {
     display: block;
     background: #efefef;
-  }
-  .bc-container {
-    margin: 0 auto;
-    padding: 12px 20px;
-    max-width: 1040px;
+
+    .bc-nav {
+      display: flex;
+      flex-direction: row;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+
+      li {
+        font-size: 0.75rem;
+        color: #747474;
+
+        &::after {
+          padding: 0 5px;
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
+          content: "\f054";
+        }
+
+        &:last-child::after {
+          content: "";
+        }
+
+        a {
+          color: #747474;
+
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+      }
+    }
+
+    .bc-container {
+      margin: 0 auto;
+      padding: 12px 20px;
+      max-width: 1040px;
+    }
   }
 }
 
