--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -453,6 +453,39 @@ img {
       opacity: 0.8;
     }
   }
+
+  .followus {
+    margin: 0 0 15px 0;
+    font-family: "Croissant One", cursive;
+    font-weight: 400;
+    font-size: 1.875rem;
+    text-align: center;
+  }
+
+  .sns {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    div {
+      margin: 0 10px;
+
+      a {
+        display: block;
+        width: 70px;
+        height: 70px;
+        background: #73cbd6;
+        border-radius: 50%;
+        font-size: 30px;
+        line-height: 70px;
+        text-align: center;
+        color: #fff;
+
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+    }
+  }
 }
 
 .bottom-container {
