--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -523,6 +523,21 @@ img {
 .page-footer {
   background: #000;
   color: #fff;
+
+  .footer-logo {
+    margin-bottom: 30px;
+    text-align: center;
+
+    img {
+      width: 160px;
+    }
+  }
+
+  .copyright {
+    font-size: 0.75rem;
+    color: #d8d8d8;
+    text-align: center;
+  }
 }
 
 .footer-container {
