--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -538,6 +538,38 @@ img {
     color: #d8d8d8;
     text-align: center;
   }
+
+  .footer-nav1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 0 30px 0;
+    padding: 0;
+    list-style: none;
+
+    @include pc() {
+      flex-direction: row;
+      justify-content: center;
+    }
+    li {
+      margin: 0 0 2rem 0;
+      font-size: 0.875rem;
+
+      @include pc() {
+        margin: 0 1rem;
+      }
+
+      a {
+        color: #d8d8d8;
+        text-decoration: none;
+
+        &:hover {
+          color: #fff;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
 
 .footer-container {
