--- a/html-book/posts/css/style.scss
+++ b/html-book/posts/css/style.scss
@@ -570,6 +570,26 @@ img {
       }
     }
   }
+
+  .footer-nav2 {
+    display: flex;
+    justify-content: center;
+    margin: 0 0 20px 0;
+    padding: 0;
+    list-style: none;
+    li {
+      margin: 0 0.75rem 3px 0.75rem;
+      font-size: 0.75rem;
+      a {
+        color: #d8d8d8;
+        text-decoration: none;
+        &:hover {
+          color: #fff;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
 
 .footer-container {
