--- a/html-book/posts/css/style.css
+++ b/html-book/posts/css/style.css
@@ -659,6 +659,33 @@ img {
   text-decoration: underline;
 }
 
+.page-footer .footer-nav2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 0 20px 0;
+  padding: 0;
+  list-style: none;
+}
+
+.page-footer .footer-nav2 li {
+  margin: 0 0.75rem 3px 0.75rem;
+  font-size: 0.75rem;
+}
+
+.page-footer .footer-nav2 li a {
+  color: #d8d8d8;
+  text-decoration: none;
+}
+
+.page-footer .footer-nav2 li a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
 .footer-container {
   padding: 60px 4%;
 }
