--- a/html-book/index/css/style.scss
+++ b/html-book/index/css/style.scss
@@ -640,6 +640,12 @@ img {
         margin: 0 auto;
         padding: 60px 20px;
       }
+
+      .home-lead {
+        max-width: 600px;
+        margin: 0 auto 60px auto;
+        text-align: center;
+      }
     }
   }
 
