--- a/html-book/index/css/style.css
+++ b/html-book/index/css/style.css
@@ -750,6 +750,21 @@ img {
   text-align: center;
 }
 
+.home .page-main .main-container h2 {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  margin: 0 auto 30px auto;
+  width: 130px;
+  height: 130px;
+  background: url(../images/home-titleshape.svg) no-repeat;
+  background-size: 130px 130px;
+  color: #ffffff;
+  font-family: "Croissant One", cursive;
+  font-weight: 400;
+  font-size: 20px;
+}
+
 .home .news {
   background: #efefef;
 }
