--- a/html-book/index/css/style.css
+++ b/html-book/index/css/style.css
@@ -765,6 +765,31 @@ img {
   font-size: 20px;
 }
 
+.home .page-main .main-container .home-latest {
+  margin: 0 0 60px 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  row-gap: 30px;
+}
+
+@media (min-width: 768px) {
+  .home .page-main .main-container .home-latest {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
+}
+
+.home .page-main .main-container .latest-item {
+  border: 1px solid #d8d8d8;
+}
+
 .home .news {
   background: #efefef;
 }
