--- a/html-book/index/css/style.scss
+++ b/html-book/index/css/style.scss
@@ -660,6 +660,24 @@ img {
         font-weight: 400;
         font-size: 20px;
       }
+
+      .home-latest {
+        margin: 0 0 60px 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: minmax(100px, auto);
+        column-gap: 10px;
+        row-gap: 30px;
+
+        @include pc() {
+          grid-template-columns: 1fr 1fr 1fr;
+          column-gap: 20px;
+        }
+      }
+
+      .latest-item {
+        border: 1px solid #d8d8d8;
+      }
     }
   }
 
