--- a/html-book/index/css/style.scss
+++ b/html-book/index/css/style.scss
@@ -677,6 +677,71 @@ img {
 
       .latest-item {
         border: 1px solid #d8d8d8;
+        background: #fff;
+
+        @include pc() {
+          border: none;
+          background: none;
+        }
+
+        .latest-image img {
+          margin: 0 0 10px 0;
+          &:hover {
+            opacity: 0.5;
+          }
+        }
+        .latest-text {
+          margin-bottom: 10px;
+          padding: 0 10px;
+          @include pc() {
+            padding: 0;
+          }
+
+          h3 {
+            margin: 0 0 10px 0;
+            font-size: 1rem;
+            line-height: 1.5;
+
+            a {
+              color: #000000;
+              text-decoration: none;
+
+              &:hover {
+                opacity: 0.5;
+              }
+            }
+          }
+        }
+      }
+
+      .home-tag {
+        margin-bottom: 1rem;
+
+        span {
+          margin: 0 3px 3px 0;
+          padding: 2px 10px;
+          border: 1px solid #73cbd6;
+          border-radius: 100px;
+          font-size: 0.75rem;
+
+          a {
+            color: #73cbd6;
+            text-decoration: none;
+          }
+        }
+      }
+
+      .home-info {
+        display: flex;
+        font-size: 0.75rem;
+
+        span::before {
+          padding-right: 5px;
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
+          color: #73cbd6;
+          content: "\f3c5";
+        }
       }
     }
   }
