--- a/html-book/index/css/style.css
+++ b/html-book/index/css/style.css
@@ -864,6 +864,71 @@ img {
   content: "\f3c5";
 }
 
+.home .page-main .main-container .home-popular {
+  margin: 0 0 60px 0;
+  border-top: 1px solid #d8d8d8;
+}
+
+.home .page-main .main-container .home-popular a {
+  display: block;
+  color: #000000;
+  text-decoration: none;
+}
+
+.home .page-main .main-container .home-popular a:hover {
+  opacity: 0.5;
+}
+
+.home .page-main .main-container .home-popular .popular-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 0;
+  border-bottom: 1px solid #d8d8d8;
+}
+
+.home .page-main .main-container .home-popular .popular-photo {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+  margin-right: 15px;
+  position: relative;
+}
+
+.home .page-main .main-container .home-popular .popular-text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.home .page-main .main-container .home-popular .popular-text h3 {
+  margin: 0 0 10px 0;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+@media (min-width: 768px) {
+  .home .page-main .main-container .home-popular .popular-text h3 {
+    font-size: 1.25rem;
+  }
+}
+
+.home .page-main .main-container .home-popular .popular-text p {
+  margin: 0 0 10px 0;
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .home .page-main .main-container .home-popular .popular-text p {
+    display: block;
+    font-size: 0.875rem;
+    line-height: 1.5;
+  }
+}
+
 .home .news {
   background: #efefef;
 }
