--- a/html-book/sidebar/css/style.css
+++ b/html-book/sidebar/css/style.css
@@ -1030,4 +1030,44 @@ img {
     grid-gap: 40px;
   }
 }
+
+.sidebar-post .main-container .side-popular {
+  margin-bottom: 60px;
+  border: 1px solid #000;
+}
+
+.sidebar-post .main-container .side-popular a {
+  display: block;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+.sidebar-post .main-container .side-popular a:hover {
+  opacity: 0.5;
+}
+
+.sidebar-post .main-container .side-popular h2 {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  margin: 0;
+  width: 80px;
+  height: 80px;
+  background: url(../images/side-titleshape.svg) no-repeat;
+  color: #fff;
+  font-family: "Croissant One", cursive;
+  font-weight: 400;
+  font-size: 0.75rem;
+}
+
+.sidebar-post .main-container .side-popular p {
+  margin: 0;
+  padding: 1rem;
+  font-size: 0.875;
+  line-height: 1.5;
+}
 /*# sourceMappingURL=style.css.map */
