--- a/html-book/sidebar/css/style.scss
+++ b/html-book/sidebar/css/style.scss
@@ -888,4 +888,44 @@ img {
       grid-gap: 40px;
     }
   }
+
+  .side-popular {
+    margin-bottom: 60px;
+    border: 1px solid #000;
+
+    a {
+      display: block;
+      position: relative;
+
+      color: #000;
+      text-decoration: none;
+
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+
+    h2 {
+      display: grid;
+      place-items: center;
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      margin: 0;
+      width: 80px;
+      height: 80px;
+      background: url(../images/side-titleshape.svg) no-repeat;
+      color: #fff;
+      font-family: "Croissant One", cursive;
+      font-weight: 400;
+      font-size: 0.75rem;
+    }
+
+    p {
+      margin: 0;
+      padding: 1rem;
+      font-size: 0.875;
+      line-height: 1.5;
+    }
+  }
 }
