--- a/html-book/sidebar/css/style.scss
+++ b/html-book/sidebar/css/style.scss
@@ -974,4 +974,55 @@ img {
       line-height: 1.5;
     }
   }
+
+  .side-book {
+    margin-bottom: 60px;
+
+    h2 {
+      margin: 0 0 20px 0;
+      padding: 5px;
+      text-align: center;
+      font-family: "Croissant One", cursive;
+      font-weight: 400;
+      font-size: 1.25rem;
+      background-color: #000;
+      color: #fff;
+    }
+
+    .book-info {
+      display: grid;
+      grid-template-columns: 80px 1fr;
+      column-gap: 10px;
+    }
+
+    .book-image {
+      grid-row: 1/3;
+    }
+
+    .book-text {
+      font-size: 0.875rem;
+      line-height: 1.5;
+
+      p {
+        margin: 0;
+      }
+    }
+
+    .buy {
+      align-self: end;
+      justify-self: start;
+
+      button {
+        padding: 0.5rem 3rem;
+        border-radius: 100px;
+        border: none;
+        background: #000;
+        color: #fff;
+
+        &:hover {
+          opacity: 0.5;
+        }
+      }
+    }
+  }
 }
