--- a/html-book/form/css/style.css
+++ b/html-book/form/css/style.css
@@ -1225,4 +1225,28 @@ img {
     padding: 0 20px 30px 20px;
   }
 }
+
+.apply .form-container input,
+.apply .form-container textarea,
+.apply .form-container label {
+  font-size: 16px;
+}
+
+.apply .form-container .form p {
+  margin: 0 0 30px 0;
+  line-height: 1.9;
+}
+
+.apply .form-container .required {
+  margin-left: 10px;
+  font-size: 0.875rem;
+  color: #73cbd6;
+}
+
+.apply .form-container input[type="text"],
+.apply .form-container input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #747474;
+}
 /*# sourceMappingURL=style.css.map */
