--- a/html-book/form/css/style.scss
+++ b/html-book/form/css/style.scss
@@ -1092,5 +1092,16 @@ img {
       padding: 10px;
       border: 1px solid #747474;
     }
+
+    select {
+      -webkit-appearance: none;
+      border: 1px solid #d8d8d8;
+      padding: 4px 2rem 4px 4px;
+      border-radius: 4px;
+      background: url(../images/caret-down.svg) no-repeat;
+      background-position: right 6px center;
+      background-size: 12px 12px;
+      font-size: 16px;
+    }
   }
 }
