--- a/html-book/form/css/style.css
+++ b/html-book/form/css/style.css
@@ -1253,11 +1253,19 @@ img {
 .apply .form-container select {
   -webkit-appearance: none;
   border: 1px solid #d8d8d8;
-  padding: 4px 2rem 4px 4px;
+  padding: 10px 2rem 10px 10px;
   border-radius: 4px;
   background: url(../images/caret-down.svg) no-repeat;
   background-position: right 6px center;
   background-size: 12px 12px;
   font-size: 16px;
+}
+
+.apply .form-container textarea {
+  width: 100%;
+  height: 6rem;
+  padding: 10px;
+  border: 1px solid #747474;
+  line-height: 1.5;
 }
 /*# sourceMappingURL=style.css.map */
