--- a/html-book/form/css/style.scss
+++ b/html-book/form/css/style.scss
@@ -1111,5 +1111,9 @@ img {
       border: 1px solid #747474;
       line-height: 1.5;
     }
+
+    input[type="checkbox"] {
+      margin-right: 10px;
+    }
   }
 }
