--- a/html-book/form/css/style.css
+++ b/html-book/form/css/style.css
@@ -1272,4 +1272,21 @@ img {
 .apply .form-container input[type="checkbox"] {
   margin-right: 10px;
 }
+
+.apply .form-container .form-button {
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.apply .form-container input[type="submit"] {
+  padding: 20px 30px;
+  background-color: #000;
+  border: none;
+  border-radius: 40px;
+  color: #fff;
+}
+
+.apply .form-container input[type="submit"]:hover {
+  opacity: 0.5;
+}
 /*# sourceMappingURL=style.css.map */
